maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:15: error: ')' expected but ',' found.
  if(hasTopWall(coords(0)), coords(1)) {
                          ^ShortestPathMaze:15: error: illegal start of simple expression
  if(hasTopWall(coords(0)), coords(1)) {
                                     ^ShortestPathMaze:23: error: ')' expected but ',' found.
  if(hasleftWall(coords(0)), coords(1)) {
                           ^ShortestPathMaze:23: error: illegal start of simple expression
  if(hasleftWall(coords(0)), coords(1)) {
                                      ^